# cycax-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.gitea/workflows/: build.yaml
deployment/: compose.yaml
docs/content/diagrams/: sequence.mermaid.svg.license
docs/diagrams/: kroki-convert.py
docs/diagrams/src/: sequence.mermaid
src/: start.sh
src/cycax_server/: __about__.py  dependencies.py  main.py
src/cycax_server/internal/: background.py  database.py  job_manager.py  prometheus_metric_gauges.py  settings.py
src/cycax_server/routers/: jobs.py
tests/: __init__.py  conftest.py  environment  test_jobs.py  test_jobs_artifacts.py  test_jobs_state.py  utils.py
